<resources>
    <string name="app_name">Github Page</string>

    <string name="nav_header_desc">Nav Desc</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Subtitle</string>

    <string name="label_home">Home</string>
    <string name="label_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search">Search</string>
    <string name="text_follow">Follow</string>
    <string name="text_unfollow">Unfollow</string>
    <string name="text_repostories">Repository</string>
    <string name="text_followings">Followings</string>
    <string name="text_repostory">Repository</string>
    <string name="text_followers">Followers</string>
    <string name="text_username">Username</string>
    <string name="text_fullname">Fullname</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>