<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".components.ui.fragments.UserDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        style="@style/Widget.App.Appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="42dp"
                    android:src="@drawable/ic_round_person_24"
                    app:civ_border_color="?attr/colorOnBackground"
                    app:civ_border_overlay="true"
                    app:civ_border_width="0.8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_fullname"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile" />

                <TextView
                    android:id="@+id/text_view_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_fullname" />

                <LinearLayout
                    android:id="@+id/holder_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/holder_followings"
                    app:layout_constraintEnd_toStartOf="@+id/holder_followings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/holder_followings">

                    <TextView
                        android:id="@+id/placeholder_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_repostory"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/placeholder_followers"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_username" />

                    <TextView
                        android:id="@+id/text_view_repositories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:maxLength="5"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/placeholder_followings"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/placeholder_followings"
                        app:layout_constraintTop_toBottomOf="@+id/placeholder_followings"
                        tools:text="Repositories Count" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/holder_followings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/holder_followers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/holder_repository"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_username">

                    <TextView
                        android:id="@+id/placeholder_followings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_followings"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/placeholder_followers"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_username"
                        tools:text="Followings" />

                    <TextView
                        android:id="@+id/text_view_followings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:maxLength="5"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/placeholder_followings"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/placeholder_followings"
                        app:layout_constraintTop_toBottomOf="@+id/placeholder_followings"
                        tools:text="Followings Count" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/holder_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/holder_followings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/holder_followings"
                    app:layout_constraintTop_toTopOf="@+id/holder_followings">

                    <TextView
                        android:id="@+id/placeholder_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_followers"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/placeholder_followings"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_username" />

                    <TextView
                        android:id="@+id/text_view_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:maxLength="5"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/placeholder_followers"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/placeholder_followers"
                        app:layout_constraintTop_toBottomOf="@+id/placeholder_followers"
                        tools:text="Followers Count" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/holder_followings">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_follow"
                        app:cornerRadius="12dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_unfollow"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_unfollow"
                        app:cornerRadius="12dp" />

                </FrameLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_followers"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tabIndicatorColor="?attr/colorOnPrimary"
                    app:tabIndicatorFullWidth="false"
                    app:tabSelectedTextColor="?attr/colorOnPrimary" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagger_followers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
